Refactor(commands): More Java 15 porting :p